Fix rightBarSkeleton showing on mobile

--- a/src/components/MessageOnly/MessagerChat/style.scss
+++ b/src/components/MessageOnly/MessagerChat/style.scss
@@ -5,13 +5,12 @@
   background-color: var(--navColor);
 }
 
-.messager-chat-responseTo{
+.messager-chat-responseTo {
   height: fit-content;
 }
 
-
-.messager-chat{
-  .chat{
+.messager-chat {
+  .chat {
     width: 100%;
     height: 100%;
     border-radius: 0;
@@ -32,13 +31,13 @@
         padding-left: 1rem;
         height: 100%;
         &-image {
-          @include circle(60%, height)
+          @include circle(60%, height);
         }
       }
       &-call {
         cursor: pointer;
         padding: 0.5rem;
-        @include circle(50%, height)
+        @include circle(50%, height);
       }
       &-close {
         cursor: pointer;
@@ -103,7 +102,7 @@
         // word-break: break-word;
         // overflow-y: auto;
         // z-index: 17;
-        &-responseTo{
+        &-responseTo {
           bottom: 5rem;
           height: fit-content;
           min-height: auto;
@@ -130,8 +129,10 @@
   }
 }
 
-@include phone{
-  .chat-footer-input{
+@include phone {
+  .chat-footer-input {
     transform: translateY(15%);
   }
 }
+
+
