--- a/src/styles/_extends.scss
+++ b/src/styles/_extends.scss
@@ -236,14 +236,14 @@ body {
   position: absolute;
   right: 0.2rem;
   top: 0.2rem;
-  height: 1rem;
+  height: 2rem;
   aspect-ratio: 1;
   cursor: pointer;
 }
 .chat {
   .erase-image {
-    top: 0rem;
-    right: 0rem;
+    top: 0.5rem;
+    right: 0.5rem;
   }
 }
 
